; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/extr_intel_epb.c_intel_epb_offline.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/kernel/cpu/extr_intel_epb.c_intel_epb_offline.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

@cpuhp_tasks_frozen = common dso_local global i32 0, align 4
@intel_epb_attr_group = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @intel_epb_offline to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @intel_epb_offline(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.device*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.device* @get_cpu_device(i32 %4)
  store %struct.device* %5, %struct.device** %3, align 8
  %6 = load i32, i32* @cpuhp_tasks_frozen, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load %struct.device*, %struct.device** %3, align 8
  %10 = getelementptr inbounds %struct.device, %struct.device* %9, i32 0, i32 0
  %11 = call i32 @sysfs_unmerge_group(i32* %10, i32* @intel_epb_attr_group)
  br label %12

12:                                               ; preds = %8, %1
  %13 = call i32 (...) @intel_epb_save()
  ret i32 0
}

declare dso_local %struct.device* @get_cpu_device(i32) #1

declare dso_local i32 @sysfs_unmerge_group(i32*, i32*) #1

declare dso_local i32 @intel_epb_save(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
